# Delamain

./: .gitignore  CMakeLists.txt  README.md
include/: Car.hpp  CarWindow.hpp
resources/: RL_APPROACH.md  resources.qrc
src/: Car.cpp  CarWindow.cpp  RL  RL_2D  RL_2D.cpp  TMInterface.py  eval_RL_CAZAUBON_2.py  main.cpp  temp
tests/distance_test/: README.md  __init__.py  constants.py  game_capture.py  requirements.txt  test_distances.py
